# my_acl

./: AIBCLib1.0-用户手册-ACL-V1_0_0.doc  ~$BCLib1.0-用户手册-ACL-V1_0_0.doc
aibc/CacheServer2_bak/api/: CacheClient.cpp  Makefile.am
aibc/CacheServer2_bak/api/CVS/: Entries  Repository
aibc/CacheServer2_bak/include/: Makefile.am
aibc/CacheServer2_bak/include/CVS/: Entries  Repository
aibc/CacheServer2_bak/include/cacheserver2/: CacheClient.h  Utility.h
aibc/CacheServer2_bak/tools/: CacheTest.cpp  Makefile.am
aibc/CacheServer2_bak/tools/CVS/: Entries  Repository
aibc/CountServer/: ChangeLog  Makefile.am  configure.ac
aibc/CountServer/CVS/: Entries  Repository
aibc/CountServer/api/: CountServerApi.cpp  CountServerApi.h  Makefile.am
aibc/CountServer/api/CVS/: Entries  Repository
aibc/CountServer/config/: CountServer.ini  Makefile.am
aibc/CountServer/config/CVS/: Entries  Repository
aibc/CountServer/include/: CountServerError.h  Makefile.am
aibc/CountServer/include/CVS/: Entries  Repository
aibc/CountServer/protocol/: CountServerProtocol.cpp  CountServerProtocol.h
aibc/CountServer/protocol/CVS/: Entries  Repository
aibc/CountServer/src/: ConfigureServer.cpp  ConfigureServer.h  CountServer.cpp  CountServer.h  LogServer.cpp  LogServer.h  Makefile.am  Module.cpp  Module.h  Table.cpp  Table.h  main.cpp
aibc/CountServer/src/CVS/: Entries  Repository
aibc/CountServer/test/: ConnectionUnitTest.py  CountClient.py  Makefile.am  SpeedUnitTest.py  TokenBucket.py  countserver_unittest.ini  main.cpp
aibc/CountServer/test/AITest/: TestAction.h  TestCase.h  TestControl.h  TestSnapshot.h
aibc/CountServer/test/CVS/: Entries  Repository
aibc/GFQ/GFQ2/test/: GFQueueTest.cpp  Makefile.am
aibc/GFQ/GFQ2/tools/: Makefile.am  NodeStat.cpp  QueueBinder.cpp  QueueMover.cpp  QueueStat.cpp
aibc/GFQ1/api/: GFQProtocol.cpp  GFQueueClient.cpp  Makefile.am
aibc/GFQ1/api/CVS/: Entries  Repository
aibc/GFQ1/config/: Makefile.am
aibc/GFQ1/config/CVS/: Repository
aibc/GFQ1/include/: Makefile.am
aibc/GFQ1/include/CVS/: Entries  Repository
aibc/GFQ1/include/gfq/: GFQProtocol.h  GFQueueClient.h  Utility.h
aibc/GFQ1/test/: Makefile.am
aibc/GFQ1/test/CVS/: Repository
aibc/GFQ1/tools/: GFQueueTest.cpp  Makefile.am
aibc/GFQ1/tools/CVS/: Entries  Repository
aibc/GFQ1/tools/atf/: TestSnapshot.h
aibc/lib/: Makefile.am  autogen.sh  configure.ac
aibc/lib/CVS/: Entries  Repository
aibc/lib/acl/: ChangeLog  Doxyfile  Makefile.am
aibc/lib/acl/CVS/: Entries  Repository
aibc/lib/acl/include/: Makefile.am
aibc/lib/acl/src/: BitArray.cpp  Codecs.cpp  Config.cpp  DateTime.cpp  Dir.cpp  File.cpp  FileLog.cpp  FileStream.cpp  FixMemoryPool.cpp  GetOpt.cpp  Hashs.cpp  IOHandle.cpp  IndexDict.cpp  IniConfig.cpp  Log.cpp  Makefile.am  McbXml.cpp  MemMap.cpp  MemoryBlock.cpp  MemoryPool.cpp  MemoryStream.cpp  PeriodCounter.cpp  Poll.cpp  Process.cpp  Reactor.cpp  Regex.cpp  SString.cpp  Shlib.cpp  SockAcceptor.cpp  SockAddr.cpp  SockConnector.cpp  SockDgram.cpp  SockDgramMcast.cpp  SockHandle.cpp  SockStream.cpp  StrAlgo.cpp  Stream.cpp  Synch.cpp  Thread.cpp  ThreadManager.cpp  (+8 more)
aibc/lib/acl/test/: GBKAndUnicodeTable.ini  Makefile.am  Test.h  TestAclAny.cpp  TestAclCodecsBase64.cpp  TestAclCodecsBinary.cpp  TestAclCodecsEscape.cpp  TestAclCodecsHex.cpp  TestAclCodecsUnicode.cpp  TestAclConfig.cpp  TestAclDateTime.cpp  TestAclDir.cpp  TestAclFile.cpp  TestAclFileLog.cpp  TestAclFileStream.cpp  TestAclFixMemoryPool.cpp  TestAclGetOpt.cpp  TestAclIOHandle.cpp  TestAclIndexDict.cpp  TestAclMemCache.cpp  TestAclMemmap.cpp  TestAclMemoryBlock.cpp  TestAclMemoryPool.cpp  TestAclMemoryStream.cpp  TestAclNumber.cpp  TestAclObjectPool.cpp  TestAclPersistentQueue.cpp  TestAclPoll.cpp  TestAclProcess.cpp  TestAclReactor.cpp  TestAclRegex.cpp  TestAclSString.cpp  TestAclShlib.cpp  TestAclSmartPtr.cpp  TestAclSockAcceptor.cpp  TestAclSockAddr.cpp  TestAclSockConnector.cpp  TestAclSockDgram.cpp  TestAclSockHandle.cpp  TestAclSockStream.cpp  (+11 more)
aibc/lib/adl/: ChangeLog  Doxyfile  configure.ac
aibc/lib/adl/CVS/: Entries  Repository
aibc/lib/adl/include/: Makefile.am
aibc/lib/adl/src/: Makefile.am  ParamBind.cpp  ParamBind.h  ResultSet.cpp  ResultSet.h
aibc/lib/adl/test/: Makefile.am  Test.h  TestAdlMysql.cpp  TestAdlOracle.cpp  TestAdlSQLite.cpp
aibc/lib/ailibEx/: Doxyfile  Makefile
aibc/lib/ailibEx/CVS/: Entries  Repository
aibc/lib/ailibEx/demo/: ATcpClient.cpp  ATcpServer.cpp  AdvFQDemo.cpp  TestBase64.cpp  TestChunk.cpp  TestDir.cpp  TestFTPPut.cpp  TestFile.cpp  TestHTTPConnection.cpp  TestHTTPServer.cpp  TestHashTable.cpp  TestMapFile.cpp  TestMcbXml.cpp  TestMemPool.cpp  TestModule.cpp  TestRegExpr.cpp  TestRemove86.cpp  TestSMPPTime.cpp  TestSnmpAgent.cpp  TestSnmpNMS_walk.cpp  TestSnmpRecvTrapV1.cpp  TestSnmpSendTrapV1.cpp  TestThrPool.cpp  TestUnicode.cpp
aibc/lib/ailibEx/include/: AIAdvFileQueue.h  AIAgent.h  AIArgument.h  AIAsyncTcp.h  AIBer.h  AICMPPLayer.h  AICMPPStru.h  AIChunkEx.h  AIConfig.h  AICrypt.h  AIDataList.h  AIDir.h  AIDualLink.h  AIFTPLayer.h  AIFile.h  AIGbkUnicode.h  AIGetOpt.h  AIHTTPLayer.h  AIHashArray.h  AIHashTable.h  AIIndexLink.h  AIIndexTree.h  AILDAPDef.h  AILib.h  AILinkRelation.h  AILogSys.h  AIMapFile.h  AIMcbXML.h  AIMemAlloc.h  AIMemPool.h  AIModule.h  AIMultiAsyncTcp.h  AIPacketTrace.h  AIProcBase.h  AIQueue.h  AIRegExpr.h  AISMPPLayer.h  AISMPPStru.h  AIShlib.h  AISnmp.h  (+10 more)
aibc/lib/ailibEx/port/: AIX.mk  CYGWIN_NT.mk  HP_UX.mk  LINUX.mk  SUNOS.mk  port.mk
aibc/lib/ailibEx/src/: AIAdvFileQueue.cpp  AIAgent.cpp  AIArgument.cpp  AIAsyncTcp.cpp  AIBer.cpp  AICMPPLayer.cpp  AICMPPStru.cpp  AIChunkEx.cpp  AIConfig.cpp  AICrypt.cpp  AIDataList.cpp  AIDir.cpp  AIDualLink.cpp  AIFTPLayer.cpp  AIFile.cpp  AIGbkUnicode.cpp  AIGbkUnicode.tab  AIGetOpt.cpp  AIHTTPLayer.cpp  AIHashTable.cpp  AILinkRelation.cpp  (+23 more)
aibc/lib/anf/: ChangeLog  Makefile.am
aibc/lib/apl/: ChangeLog  Doxyfile  Makefile.am
aibc/lib/include/: Makefile.am
aibc/lib/m4/: gnulib-cache.m4  gnulib-comp.m4
aibc/sandbox/libapl/: Makefile.in  configure  configure.ac
(+1589 files in other folders)
