#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.63)
AC_INIT([libapl],[0.1],[fengzz@asiainfo.com])


AC_CONFIG_AUX_DIR([build-aux])
AM_INIT_AUTOMAKE([-Wall -Werror foreign])

AC_CONFIG_MACRO_DIR([m4])

LT_INIT

AC_CONFIG_SRCDIR([include/apl/config.h.in])
AC_CONFIG_HEADERS([include/apl/config.h])
AC_CONFIG_FILES([Makefile src/Makefile test/Makefile])

# Checks for programs.
AC_PROG_CC

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.
AC_C_RESTRICT
AC_C_INLINE

AC_TYPE_SIZE_T
AC_TYPE_SSIZE_T
AC_TYPE_INTPTR_T
AC_TYPE_UINTPTR_T
AC_TYPE_MODE_T
AC_TYPE_OFF_T

# Checks for library functions.

AC_OUTPUT
